fix(dark-theme.scss): dark mode styles

--- a/src/themes/dark-theme.scss
+++ b/src/themes/dark-theme.scss
@@ -27,4 +27,14 @@ $dark-theme: mat.define-dark-theme((
     }
   }
 
+  svg {
+    circle.node {
+      stroke: #e91e63;
+    }
+
+    .node text {
+      fill: #fff;
+    }
+  }
+
 }
